hello1/hello1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello1
  name: hello1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello1
    spec:
      containers:
      - image: thanaphat1991/line-hello-1
        name: line-hello-1
