hello1/hello1-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello1
  namespace: hello1
spec:
  ingressClassName: nginx
  rules:
  - host: hello1.local
    http:
      paths:
      - backend:
          service:
            name: hello1
            port:
              number: 8000
        path: /
        pathType: Prefix
